# andreabedini.github.io

./: .gitignore  CNAME  Main.hs  about.markdown  academia.markdown  academia.md  blog.md  cabal.project  cabal.project.freeze  code.markdown  cv.md  education.md  experience.md  index.html  index.markdown  index.md  master.asc  publications.markdown  research.markdown  site.cabal  site.hs  teaching.markdown
.github/workflows/: haskell.yml  publish.yml
404/: index.html
academia/: index.html
blog/: index.html
css/: style.css
cv/: index.html
education/: index.html
experience/: index.html
posts/: 2019-05-19-thingy.markdown
posts/2019-05-19-thingy/: index.html
templates/: archive.html  default.html  footer.html  nav.html  page.html  post.html  writings.html
