name:               www-andreabedini-com
version:            0.1.0.0
author:             Andrea Bedini
maintainer:         andrea@andreabedini.com
build-type:         Simple
cabal-version:      >=1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , filepath
  ghc-options:      -threaded
  default-language: Haskell2010
